<resources>
    <string name="app_name">Search Images</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="SearchButtonText">Search</string>
    <string name="SearchBoxHint">Search</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="settings">Advanced Filters</string>
    <string name="ImageSize">Image Size</string>
    <string name="ImageColor">Color Filter</string>
    <string name="ImageType">Image Type</string>
    <string name="ButtonSave">Save</string>
    <string name="ButtonCancel">Cancel</string>
    <string name="SiteFilter">Site Filter</string>
    <string name="NoResultsMessage">To begin, search using top bar</string>

    <string-array name="ArrayImageSize">
        <item>any</item>
        <item>icon</item>
        <item>medium</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>

    <string-array name="ArrayImageType">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string-array name="ArrayImageColor">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

</resources>
